--- a/.classpath
+++ b/.classpath
@@ -2,5 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/net.rim.ejde.BlackBerryVMInstallType/BlackBerry JRE 4.5.0"/>
+	<classpathentry kind="src" path=".locale_interfaces"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
